# CSC246-grading-scripts

./: .gitignore
grade/: pyproject.toml
grade/grade/: __init__.py  grade.py  grade_submission.py  submission_loader.py  test.py
