[tool.poetry]
name = "grade"
version = "0.1.0"
description = ""
authors = ["canarypwn <canarypwn@aosc.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pandas-stubs = "^2.2.2.240909"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
